# axiom

./: .gitignore  Cargo.toml  README.md
adapters/axiom_tokio/: Cargo.toml
axiom-tokio/: Cargo.toml
axiom-tokio/src/: lib.rs
docs/: architecture.md  architecture_diagrams.md  foundations.md  philosophy.md
examples/: complex_topology.rs  counter.rs  pipeline.rs
examples/training_server/: Cargo.toml  README.md  config.toml
examples/training_server/docs/: architecture.md  diagrams.md
examples/training_server/src/: config.rs  main.rs  types.rs
examples/training_server/src/machines/: batcher.rs  checkpointer.rs  controller.rs  evaluator.rs  loader.rs  mod.rs  observer.rs  trainer.rs
examples/training_server/src/nn/: layer.rs  mod.rs  network.rs  sgd.rs
src/: deploy.rs  entity.rs  flow.rs  func.rs  lib.rs  link.rs  machine.rs  port.rs  portset.rs  resource.rs  time.rs
src/builtin/: collector.rs  entity_root.rs  func_machine.rs  identity.rs  latch.rs  mod.rs  sink.rs  source.rs  tee.rs
src/runtime/: linear.rs  mod.rs
tests/: integration.rs  new_features.rs
