[package]
name = "axiom"
version = "0.1.0"
edition = "2024"
description = "Func + Machine: typed ports, explicit topology, deploy-time physics. Zero-dependency computation primitives for observable, controllable systems. // 函数与状态机：类型化端口、显式拓扑、部署时物理决策。零依赖计算原语，构建可观测、可控制的软件系统。"
license = "MIT"

[[example]]
name = "counter"
path = "examples/counter.rs"

[[example]]
name = "pipeline"
path = "examples/pipeline.rs"

[[example]]
name = "complex_topology"
path = "examples/complex_topology.rs"
required-features = ["std"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = ["std"]
std = []
serialize = ["dep:serde"]
