[package]
name = "training_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axiom = { path = "../.." }
axiom-tokio = { path = "../../axiom-tokio" }

# 神经网络计算
ndarray = { version = "0.16", features = ["rayon"] }

# 并行计算
rayon = "1.10"

# CLI
clap = { version = "4.5", features = ["derive"] }

# 配置 + 序列化
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
bincode = "1.3"

# 异步运行时
tokio = { version = "1.40", features = ["full"] }

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 时间
chrono = "0.4"
